    dependency.  Within a package, all matching dependencies are
    modified to include the path.  This is useful for cases where
    an application packages private versions of libraries -- the
    dependencies still need to be there so that inter-component
    requirements are honored, but they must not perturb the rest
    of the system.  

Changes in 0.62.10:
  * EnforceSonameBuildRequirements enhanced to handle correctly cases
    where more than one trove can resolve a single soname dependency.
  * EnforceConfigLogBuildRequirements now can take exceptions, which
    can be specified either as a filename (such as /usr/bin/bison or
    %(bindir)s/bison) or as a required trove (such as bison:runtime).
  * The trove.Trove initializer no longer allows for a trove to be created
    with a name that has more than one ":" character in it.
  * EnforceSonameBuildRequirements now can take exceptions, which are
    specified as a required trove (such as libfoo:devel) to avoid adding
    to the list of requirements.
  * EnforceSonameBuildRequirements now produces errors for missing build
    requirements, and EnforceConfigLogBuildRequirements now demonstrates
    very few false positives, and so has been updated to warning instead
    of info.
  * Added a check to warn when a trove is installed multiple times from
    the same branch with incompatible install buckets (--no-conflict-check
    overrides this check)
  * Redirects can now redirect to nothing, which allows components to 
    disappear gracefully on a redirection
  * A soname dependency is now provided only if the library is in a
    default library directory, or in a directory explicitly added with a
    SharedLibrary(subtrees='/path/to/dir/') call.

Changes in 0.62.9:
  * EnforceConfigLogBuildRequirements policy added.  It looks through
    all config.log files anywhere under the build directory for programs
    that configure has found, and ensures that the transitive closure